fix: Fix bottom spacing of `.form--tight`

--- a/styles/base/extenders/_b.ex.form.scss
+++ b/styles/base/extenders/_b.ex.form.scss
@@ -29,7 +29,8 @@
     @include bl-style-adjust {
       @include mb(base);
     }
-    &:last-child, > :last-child {
+    &:last-child, 
+    > :last-child {
       margin-bottom: 0;
     }
     > ul {
